# django_cached_counts

./: pyproject.toml  setup.py
django_cached_counts/: __init__.py
