[tool.poetry]
name = "django_cached_counts"
version = "0.1.0"
description = "Caching count() in django models"
authors = ["ph <robotnaoborot@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
