[tool.poetry]
name = "django_cached_counts"
version = "0.2.0"
description = "Caching count() in django models"
authors = ["ph <robotnaoborot@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"



[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
bugs = "https://github.com/pawnhearts/django_cached_counts/issues"
changelog = "https://github.com/pawnhearts/django_cached_counts/blob/master/changelog.md"
homepage = "https://github.com/pawnhearts/django_cached_counts"
